# structiming

./: .gitignore  README.md  pyproject.toml
src/structiming/: Stimer.py  StimerLoop.py  __init__.py  registry.py  types.py  utils.py
