[project]
name = "structiming"
version = "0.1.0"
description = "Structured timing"
authors = [{ name = "lml" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structiming"]